# books-recommendation-system

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
books_recommendation_system/: commands.py  train.py
books_recommendation_system/data/: data_module.py  prepare_data.py
books_recommendation_system/models/: bert4rec.py  toppop.py
configs/: main_conf.yaml
configs/data/: data.yaml
configs/models/: model.yaml
data/: ratings.csv.dvc
